--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Изучаем Python вместе!</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-mobile.css" media="only screen and (max-width: 768px)">
+
 </head>
 <body>
     <header>
@@ -70,7 +72,18 @@ while count < 5:
     count += 1</code></pre>
         <p>Циклы делают ваш код короче и удобнее для решения повторяющихся задач!</p>
     </section>
-
+    <div class="video-wrapper">
+        <h2 class="video-title">ВИДЕО-УРОК: ВВЕДЕНИЕ В PYTHON</h2>
+        <div class="video-container">
+            <iframe 
+                src="https://rutube.ru/play/embed/534af3893bd8510fab29403beb27152b/" 
+                frameborder="0" 
+                allow="clipboard-write; autoplay" 
+                webkitallowfullscreen mozallowfullscreen allowfullscreen>
+            </iframe>
+        </div>
+    </div>
+    
     <footer>
         <p>&copy; 2025 Python для старшеклассников. Все права защищены.</p>
     </footer>
